unpackaged/main/default/objects/litify_ext__Hearing__c/litify_ext__Hearing__c.object-meta.xml
<CustomObject>
    <label>Hearing</label>
    <nameField>
        <label>Hearing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hearings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>