unpackaged/main/default/objects/litify_ext__Hearing__c/fields/litify_ext__Court__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Court__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Court</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hearings (Court)</relationshipLabel>
    <relationshipName>HearingsCourt</relationshipName>
    <type>Lookup</type>
</CustomField>