unpackaged/main/default/objects/litify_ext__Hearing__c/fields/litify_ext__Deposition_Deadline__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Deposition_Deadline__c</fullName>
    <label>Deposition Deadline</label>
    <type>Date</type>
</CustomField>