unpackaged/main/default/objects/litify_ext__Hearing__c/fields/litify_ext__Deposition_Required__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Deposition_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deposition Required</label>
    <type>Checkbox</type>
</CustomField>