unpackaged/main/default/objects/litify_ext__Hearing__c/fields/litify_ext__Hearing_Notes__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Hearing_Notes__c</fullName>
    <label>Hearing Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>