unpackaged/main/default/objects/litify_ext__Hearing__c/fields/litify_ext__Judge__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Judge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Judge</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hearings</relationshipLabel>
    <relationshipName>Hearings</relationshipName>
    <type>Lookup</type>
</CustomField>