unpackaged/main/default/objects/litify_ext__Hearing__c/fields/litify_ext__Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Scheduled_Date__c</fullName>
    <label>Scheduled Date</label>
    <type>DateTime</type>
</CustomField>