unpackaged/main/default/objects/litify_ext__Hearing__c/listViews/litify_ext__All.listView-meta.xml
<ListView>
    <fullName>litify_ext__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>